# rodio-experiments

./: .gitignore  Cargo.toml  codebook.toml  flake.nix  rust-toolchain.toml
benches/: mixer.rs  queue.rs
examples/: beep.rs  collect_to_samples.rs  piano.rs  voip.rs
src/: chirp.rs  common.rs  const_source.rs  dynamic_source.rs  dynamic_source_ext.rs  effects.rs  fixed_source.rs  generators.rs  lib.rs  math.rs  signal_generator.rs
src/chirp/: const_source.rs  fixed_source.rs
src/common/: mixer.rs  queue.rs
src/const_source/: amplify.rs  buffer.rs  chain.rs  list.rs  list_of_sources.rs  macros.rs  mixed.rs  mixer.rs  queue.rs  queued.rs  route_channels.rs
src/conversions/: channelcount.rs
src/dynamic_source/: conversions.rs
src/effects/: amplify.md  amplify.rs  automatic_gain_control.md  automatic_gain_control.rs  blt.rs  channel_volume.md  channel_volume.rs  collect_into_buffer.md  distortion.md  distortion.rs  dither.md  dither.rs  fade.rs  fade_in.md  fade_out.md  fade_out_after.md  fades.rs  high_pass.md  high_pass_with_bandwidth.md  inspect.rs  inspect_frame.md  limit.md  limiter.rs  linear_gain_ramp.md  low_pass.md  low_pass_with_bandwidth.md  pausable.md  pausable.rs  periodic_access.md  periodic_access.rs  position.md  position.rs  skip_duration.md  skip_duration.rs  skip_samples.md  skip_samples.rs  stoppable.md  stoppable.rs  take_duration.md  take_duration.rs  (+4 more)
src/fixed_source/: buffer.rs  chain.rs  conversions.rs  inspect.rs  list.rs  list_of_sources.rs  macros.rs  mixed.rs  mixer.rs  pausable.rs  periodic_access.rs  queue.rs  queued.rs  take.rs  (+4 more)
(+45 files in other folders)
