[package]
name = "rodio-experiments"
version = "0.1.0"
edition = "2024"

[dependencies]
rodio = { git = "https://www.github.com/RustAudio/rodio",  branch = "master", features = ["experimental", "playback", "wav_output"] }
rubato = "1.0.0"
audioadapter = "2.0"
audioadapter-buffers = "2.0"
itertools = "0.14.0"
thiserror = "2.0.18"
rand = "0.10.0"
rand_distr = "0.6.0"
dasp_sample = "0.11.0"
roots = "0.0.8"

[dev-dependencies]
spectrum-analyzer = "1.7.0"
divan = "0.1.21"
clap = { version = "4.6.0", features = ["derive"] }

[features]
64bit = []
tracing = []

[[bench]]
name = "queue"
harness = false

[[bench]]
name = "mixer"
harness = false
